; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_initio.c_initio_append_done_scb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_initio.c_initio_append_done_scb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.initio_host = type { %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk* }
%struct.scsi_ctrl_blk = type { %struct.scsi_ctrl_blk*, i32 }

@SCB_DONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.initio_host*, %struct.scsi_ctrl_blk*)* @initio_append_done_scb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @initio_append_done_scb(%struct.initio_host* %0, %struct.scsi_ctrl_blk* %1) #0 {
  %3 = alloca %struct.initio_host*, align 8
  %4 = alloca %struct.scsi_ctrl_blk*, align 8
  store %struct.initio_host* %0, %struct.initio_host** %3, align 8
  store %struct.scsi_ctrl_blk* %1, %struct.scsi_ctrl_blk** %4, align 8
  %5 = load i32, i32* @SCB_DONE, align 4
  %6 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %7 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 8
  %8 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %9 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %8, i32 0, i32 0
  store %struct.scsi_ctrl_blk* null, %struct.scsi_ctrl_blk** %9, align 8
  %10 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %11 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %10, i32 0, i32 0
  %12 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %11, align 8
  %13 = icmp ne %struct.scsi_ctrl_blk* %12, null
  br i1 %13, label %14, label %23

14:                                               ; preds = %2
  %15 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %16 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %17 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %16, i32 0, i32 0
  %18 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %17, align 8
  %19 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %18, i32 0, i32 0
  store %struct.scsi_ctrl_blk* %15, %struct.scsi_ctrl_blk** %19, align 8
  %20 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %21 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %22 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %21, i32 0, i32 0
  store %struct.scsi_ctrl_blk* %20, %struct.scsi_ctrl_blk** %22, align 8
  br label %30

23:                                               ; preds = %2
  %24 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %25 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %26 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %25, i32 0, i32 1
  store %struct.scsi_ctrl_blk* %24, %struct.scsi_ctrl_blk** %26, align 8
  %27 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %28 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %29 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %28, i32 0, i32 0
  store %struct.scsi_ctrl_blk* %27, %struct.scsi_ctrl_blk** %29, align 8
  br label %30

30:                                               ; preds = %23, %14
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
